Fixing title selectin bug when the title was too short to register the selection loupe.

--- a/media/ios/static/trainer.css
+++ b/media/ios/static/trainer.css
@@ -52,11 +52,16 @@
     border-bottom: 1px solid #D0D0D9;
 }
 
+.NB-trainer-title .NB-trainer-section-body {
+    padding: 0 12px 12px;
+}
 .NB-trainer-title .NB-title-trainer {
-    padding: 6px 0 12px;
+    padding: 18px 0 12px;
     font-size: 18px;
     font-weight: bold;
     line-height: 24px;
+    width: 100%;
+    min-height: 32px;
     -webkit-user-select: auto;
     -webkit-touch-callout: default;
     -webkit-highlight: auto; 
